--- a/.github/workflows/buildReporting.yml
+++ b/.github/workflows/buildReporting.yml
@@ -148,14 +148,21 @@ jobs:
     - 
       name: Install Cosign
       uses: sigstore/cosign-installer@main
-    -
-      name: Write signing key to disk
-      run: 'echo "$KEY" > /tmp/cosign.key'
-      shell: bash
-      env:
-        KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
-    -
-      name: Sign the published Docker image
-      run: cosign sign --key /tmp/cosign.key docker.io/anhefti/seb-server:${{ env.TAG_NAME }}
-      env:
-        COSIGN_PASSWORD: "${{ secrets.DOCKER_SIGN_PASSWORD }}"
+    - 
+      name: Use Cosign to sign the image recursively
+      run: |
+        # Sign the multiarch images, the signature is also pushed to the registry
+        echo -n "${{ secrets.DOCKER_SIGN_PASSWORD }}" | \
+          cosign sign --recursive --key <(echo -n "${{ secrets.COSIGN_PRIVATE_KEY }}") \
+          "docker.io/anhefti/seb-server:${{ env.TAG_NAME }}"
+#    -
+#      name: Write signing key to disk
+#      run: 'echo "$KEY" > /tmp/cosign.key'
+#      shell: bash
+#      env:
+#        KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+#    -
+#      name: Sign the published Docker image
+#      run: cosign sign --key /tmp/cosign.key docker.io/anhefti/seb-server:${{ env.TAG_NAME }}
+#      env:
+#        COSIGN_PASSWORD: ${{ secrets.DOCKER_SIGN_PASSWORD }}
