enable open API

--- a/src/main/resources/config/application-ws.properties
+++ b/src/main/resources/config/application-ws.properties
@@ -46,6 +46,8 @@ sebserver.webservice.http.external.port=
 sebserver.webservice.http.redirect.gui=/
 
 ### Open API Documentation
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.oauth.clientId=guiClient
 springdoc.swagger-ui.oauth.clientSecret=${sebserver.password}
 #springdoc.consumes-to-match=application/json,application/x-www-form-urlencoded
