--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SEB Server
-spring.profiles.active=ws,dev
+spring.profiles.active=ws,dev,gui
 sebserver.version=@sebserver-version@
 
 ##########################################################
